--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha256-YLGeXaapI0/5IgZopewRJcFXomhRMlYYjugPLSyNjTY=" crossorigin="anonymous" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha256-pl1bSrtlqtN/MCyW8XUTYuJCKohp9/iJESVW1344SBM=" crossorigin="anonymous"></script>
+        integrity="sha256-CjSoeELFOcH0/uxWu6mC/Vlrc1AARqbm/jiiImDGV3s=" crossorigin="anonymous"></script>
 
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
@@ -96,6 +96,9 @@
                         </a>
                         <a href="https://stackoverflow.com/users/5455517/sbz" target="_blank">
                             <i class="fa fa-stack-overflow fa-2x" aria-hidden="true"></i>
+                        </a>
+                        <a href="https://hackerrank.com/profile/sbrabez" target="_blank">
+                            <i class="fa fa-hackerrank fa-2x" aria-hidden="true"></i>
                         </a>
                     </p>
 
