split css in a separated file

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
         integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
 
+    <!-- 6dev.net -->
+    <link href="https://6dev.net/assets/css/style.css" rel="stylesheet" type="text/css"
+        integrity="sha256-JynXH6aVv9kVAdUaKscMYpTN0bkTXu94kroKjoG8gtI=" crossorigin="anonymous" />
+
     <!-- Common meta markup -->
     <meta name="author" content="Sofian Brabez" />
     <meta name="description" content="Personal website" />
@@ -34,39 +38,6 @@
     <meta name="twitter:title" content="Sofian Brabez" />
     <meta name="twitter:image" content="https://6dev.net/resume/assets/images/profile.png" />
 
-    <style>
-        body {
-            padding-top: 2em;
-        }
-
-        a {
-            color: black;
-            text-decoration: none;
-        }
-
-        a:focus,
-        a:hover {
-            color: #f09228;
-            text-decoration: none;
-        }
-
-        .whoami a {
-            color: #2455c3;
-            text-decoration: underline;
-        }
-
-        .avatar {
-            width: 170px;
-            height: 170px;
-            border-radius: 180px;
-            border: 2px solid #ccc;
-            box-shadow: 0 0 20px -5px black;
-        }
-
-        .container {
-            max-width: 960px;
-        }
-    </style>
 </head>
 
 <body>
@@ -105,16 +76,30 @@
                     <hr/>
 
                     <div class="whoami">
-                        <p> Hey, I'm Sofian. I'm currently working as <a
+                        <p> Hey, I'm Sofian. I'm a passionate Systems Engineer currently working as <a
                                 href="https://en.wikipedia.org/wiki/Site_Reliability_Engineering">Site Reliability
                                 Engineer</a> based in Dublin, Ireland.
                         <p>
-                            I worked on multiple range of projects, from writing software to build product, to automate and
-                            operate internet hosting, financial information systems and cloud-based infrastructure businesses.
+                            I have acquired experiences working previously on multiple range of projects:
+                            <ul>
+                                <li>Build systems and software for appliance-based and
+                                    SAAS products inside a product team</li>
+                                <li>Automate and operate internet hosting
+                                    services, financial information systems and
+                                    cloud-based infrastructure businesses</li>
+                                <li>Build infrastructure projects using <a href="https://www.python.org">Python</a>,
+                                    <a href="https://www.gnu.org/software/bash">Bash</a>
+                                    and recently <a href="https://golang.org">Golang</a>
+                                    used in production</li>
+                            </ul>
                         </p>
                         <p>
                             I enjoy to be part of the Free and open-source software philosophy of sharing free codes, ideas and projects since 2008.
-                            As an hobbyist free software developer, I'm contributing to the <a href="https://freebsd.org">FreeBSD</a> project as a committer.
+                            As an hobbyist free software developer, I'm
+                            contributing to the <a
+                            href="https://freebsd.org">FreeBSD</a> project as a
+                        committer. <em>Nowadays my contributions are
+                            sporadic</em>.
                         </p>
                         <p>
                             My main topics of interests are about <a href="https://en.wikipedia.org/wiki/Unix">UNIX</a>,
