add Google Analytics tracker

--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
         integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
 
     <!-- 6dev.net -->
+    <!-- Style -->
     <link href="https://6dev.net/assets/css/style.css" rel="stylesheet" type="text/css"
         integrity="sha256-JynXH6aVv9kVAdUaKscMYpTN0bkTXu94kroKjoG8gtI=" crossorigin="anonymous" />
+    <!-- Google Analytics -->
+    <script src="https://6dev.net/assets/js/ga.js"
+        integrity="sha256-k8NW2YWiEaGmgTy+40Mc4XOJ4Js56JGW+Ga8NKAY3EU=" crossorigin="anonymous"></script>
 
     <!-- Common meta markup -->
     <meta name="author" content="Sofian Brabez" />
