upgrade font-awesome and add more social links

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         integrity="sha256-CjSoeELFOcH0/uxWu6mC/Vlrc1AARqbm/jiiImDGV3s=" crossorigin="anonymous"></script>
 
     <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
-        integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" rel="stylesheet"
+        integrity="sha256-UzFD2WYH2U1dQpKDjjZK72VtPeWP50NoJjd26rnAdUI=" crossorigin="anonymous" />
 
     <!-- 6dev.net -->
     <!-- Style -->
@@ -58,22 +58,34 @@
                     <h1><a href="/">Sofian Brabez</a></h1>
                     <p>
                         <a href="https://github.com/sbz" target="_blank">
-                            <i class="fa fa-github fa-2x" aria-hidden="true"></i>
+                            <i class="fab fa-github fa-2x" aria-hidden="true"></i>
+                        </a>
+                        <a href="https://gitlab.com/sbz" target="_blank">
+                            <i class="fab fa-gitlab fa-2x" aria-hidden="true"></i>
+                        </a>
+                        <a href="https://bitbucket.com/sbz" target="_blank">
+                            <i class="fab fa-bitbucket fa-2x" aria-hidden="true"></i>
                         </a>
                         <a href="https://twitter.com/sbrabez" target="_blank">
-                            <i class="fa fa-twitter fa-2x" aria-hidden="true"></i>
+                            <i class="fab fa-twitter fa-2x" aria-hidden="true"></i>
                         </a>
                         <a href="https://linkedin.com/in/sbrabez" target="_blank">
-                            <i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
+                            <i class="fab fa-linkedin-square fa-2x" aria-hidden="true"></i>
                         </a>
                         <a href="mailto:[undisclosed]" target="_blank">
                             <i class="fa fa-envelope fa-2x" aria-hidden="true"></i>
                         </a>
                         <a href="https://stackoverflow.com/users/5455517/sbz" target="_blank">
-                            <i class="fa fa-stack-overflow fa-2x" aria-hidden="true"></i>
+                            <i class="fab fa-stack-overflow fa-2x" aria-hidden="true"></i>
                         </a>
                         <a href="https://hackerrank.com/profile/sbrabez" target="_blank">
-                            <i class="fa fa-hackerrank fa-2x" aria-hidden="true"></i>
+                            <i class="fab fa-hackerrank fa-2x" aria-hidden="true"></i>
+                        </a>
+                        <a href="https://wiki.freebsd.org/SofianBrabez" target="_blank">
+                            <i class="fab fa-freebsd fa-2x" aria-hidden="true"></i>
+                        </a>
+                        <a href="https://news.ycombinator.com/user?id=sbz" target="_blank">
+                            <i class="fab fa-hacker-news fa-2x" aria-hidden="true"></i>
                         </a>
                     </p>
 
