add ipv6 ready badge and delete resume folder

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
     <meta property="og:title" content="Sofian Brabez" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://6dev.net/" />
-    <meta property="og:image" content="https://6dev.net/resume/assets/images/profile.png" />
+    <meta property="og:image" content="https://6dev.net/assets/images/profile.png" />
 
     <!-- Twitter Cards markup -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@sbrabez" />
     <meta name="twitter:creator" content="@sbrabez" />
     <meta name="twitter:title" content="Sofian Brabez" />
-    <meta name="twitter:image" content="https://6dev.net/resume/assets/images/profile.png" />
+    <meta name="twitter:image" content="https://6dev.net/assets/images/profile.png" />
 
 </head>
 
@@ -49,8 +49,9 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-2 order-md-last text-center">
-                    <a href="https://6dev.net/resume/assets/images/profile.png" target="_blank"><img src="https://6dev.net/resume/assets/images/profile.png" alt="Sofian Brabez"
-                            class="avatar"></a>
+                    <a href="https://6dev.net/assets/images/profile.png" target="_blank">
+                        <img src="https://6dev.net/assets/images/profile.png" alt="Sofian Brabez" class="avatar">
+                    </a>
                 </div>
 
                 <!-- Social links -->
@@ -129,6 +130,12 @@
         </div>
     </main>
     <footer>
+        <div class="text-center">
+            <a href="https://ipv6-test.com/validate.php?url=6dev.net">
+                <img src="https://6dev.net/assets/images/button-ipv6-80x15.png"
+                alt="ipv6 ready" title="ipv6 ready" border='0' />
+            </a>
+        </div>
         <div class="row">
             <div class="col-md-12 text-center">
                 <br>
