--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
                         <a href="https://news.ycombinator.com/user?id=sbz" target="_blank">
                             <i class="fab fa-hacker-news fa-2x" aria-hidden="true"></i>
                         </a>
+                        <a href="https://www.linkedin.com/in/sbrabez" target="_blank">
+                            <i class="fab fa-linkedin fa-2x" aria-hidden="true"></i>
+                        </a>
                     </p>
 
                     <hr/>
