add pinterest social link

--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
                         <a href="https://www.linkedin.com/in/sbrabez" target="_blank">
                             <i class="fab fa-linkedin fa-2x" aria-hidden="true"></i>
                         </a>
+                        <a href="https://pinterest.com/sbrabez" target="_blank">
+                            <i class="fab fa-pinterest fa-2x" aria-hidden="true"></i>
+                        </a>
                     </p>
 
                     <hr/>
