--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
 
     <!-- 6dev.net -->
     <!-- Style -->
-    <link href="https://6dev.net/assets/css/style.css" rel="stylesheet" type="text/css"
-        integrity="sha256-JynXH6aVv9kVAdUaKscMYpTN0bkTXu94kroKjoG8gtI=" crossorigin="anonymous" />
+    <link href="./assets/css/style.css" rel="stylesheet" type="text/css" />
     <!-- Google Analytics -->
-    <script src="https://6dev.net/assets/js/ga.js"
-        integrity="sha256-k8NW2YWiEaGmgTy+40Mc4XOJ4Js56JGW+Ga8NKAY3EU=" crossorigin="anonymous"></script>
+    <script src="./assets/js/ga.js"></script>
 
     <!-- Common meta markup -->
     <meta name="author" content="Sofian Brabez" />
@@ -33,14 +31,14 @@
     <meta property="og:title" content="Sofian Brabez" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://6dev.net/" />
-    <meta property="og:image" content="https://6dev.net/assets/images/profile.png" />
+    <meta property="og:image" content="./assets/images/profile.png" />
 
     <!-- Twitter Cards markup -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@sbrabez" />
     <meta name="twitter:creator" content="@sbrabez" />
     <meta name="twitter:title" content="Sofian Brabez" />
-    <meta name="twitter:image" content="https://6dev.net/assets/images/profile.png" />
+    <meta name="twitter:image" content="./assets/images/profile.png" />
 
 </head>
 
@@ -49,8 +47,8 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-2 order-md-last text-center">
-                    <a href="https://6dev.net/assets/images/profile.png" target="_blank">
-                        <img src="https://6dev.net/assets/images/profile.png" alt="Sofian Brabez" class="avatar">
+                    <a href="./assets/images/profile.png" target="_blank">
+                        <img src="./assets/images/profile.png" alt="Sofian Brabez" class="avatar">
                     </a>
                 </div>
 
@@ -99,36 +97,18 @@
                     <hr/>
 
                     <div class="whoami">
-                        <p> Hey, I'm Sofian. I'm a passionate Systems Engineer currently working as <a
+                        <p> Hey, I'm Sofian. I'm an enthusiast Engineer currently working as <a
                                 href="https://en.wikipedia.org/wiki/Site_Reliability_Engineering">Site Reliability
                                 Engineer</a> based in Dublin, Ireland.
-                        <p>
-                            I have acquired experiences working previously on multiple range of projects:
-                            <ul>
-                                <li>Build systems and software for appliance-based and
-                                    SAAS products inside a product team</li>
-                                <li>Automate and operate internet hosting
-                                    services, financial information systems and
-                                    cloud-based infrastructure businesses</li>
-                                <li>Build infrastructure projects using <a href="https://www.python.org">Python</a>,
-                                    <a href="https://www.gnu.org/software/bash">Bash</a>
-                                    and recently <a href="https://golang.org">Golang</a>
-                                    used in production</li>
-                            </ul>
                         </p>
                         <p>
-                            I enjoy to be part of the Free and open-source software philosophy of sharing free codes, ideas and projects since 2008.
-                            As an hobbyist free software developer, I'm
-                            contributing to the <a
-                            href="https://freebsd.org">FreeBSD</a> project as a
-                        committer. <em>Nowadays my contributions are
-                            sporadic</em>.
-                        </p>
-                        <p>
-                            My main topics of interests are about <a href="https://en.wikipedia.org/wiki/Unix">UNIX</a>,
-                            <a href="https://en.wikipedia.org/wiki/Linux">Linux</a>, Operating
-                            systems, Software programming, Distributed systems, Infrastructure and expanding my knowledge around Reliability and
-                            Resiliency of internet-based services.
+                            My main topics of interests are about <a
+                                href="https://en.wikipedia.org/wiki/Unix">UNIX</a>,
+                            <a href="https://en.wikipedia.org/wiki/Linux">Linux</a>,
+                            Operating systems, Software programming, Security,
+                            Distributed systems, Infrastructure and expanding my
+                            knowledge around Reliability and Resiliency of
+                            internet-based services.
                         </p>
                     </div>
                 </div>
@@ -138,14 +118,14 @@
     <footer>
         <div class="text-center">
             <a href="https://ipv6-test.com/validate.php?url=6dev.net">
-                <img src="https://6dev.net/assets/images/button-ipv6-80x15.png"
+                <img src="./assets/images/button-ipv6-80x15.png"
                 alt="ipv6 ready" title="ipv6 ready" border='0' />
             </a>
         </div>
         <div class="row">
             <div class="col-md-12 text-center">
                 <br>
-                <p><small class="text-muted">© 2019 Sofian Brabez</small></p>
+                <p><small class="text-muted">© 2007-2020 Sofian Brabez</small></p>
             </div>
         </div>
     </footer>
