--- a/index.html
+++ b/index.html
@@ -100,19 +100,22 @@
                     <hr/>
 
                     <div class="whoami">
-                        <p> Hey, I'm Sofian. I'm an enthusiast Engineer currently working as <a
-                                href="https://en.wikipedia.org/wiki/Site_Reliability_Engineering">Site Reliability
-                                Engineer</a> based in Dublin, Ireland.
+                        <p> Hey, I'm Sofian. I'm an FOSS enthusiast with past
+                         experiences working as <a href="https://en.wikipedia.org/wiki/Site_Reliability_Engineering">Site Reliability
+                                Engineer</a>, <a href="https://en.wikipedia.org/wiki/Software_engineer">Software Engineer</a>
+                            and <a href="https://en.wikipedia.org/wiki/Systems_engineering">Systems
+                                Engineer</a> and on <strong>Security</strong>. I'm currently based in Dublin, Ireland.
                         </p>
                         <p>
-                            My main topics of interests are about <a
-                                href="https://en.wikipedia.org/wiki/Unix">UNIX</a>,
-                            <a href="https://en.wikipedia.org/wiki/Linux">Linux</a>,
-                            Operating systems, Software programming, Security,
-                            Distributed systems, Infrastructure and expanding my
-                            knowledge around Reliability and Resiliency of
-                            internet-based services.
-                        </p>
+                            Hosted code <a href="https://git.6dev.net">repos</a> area and
+                            <a href="https://people.freebsd.org/~sbz">FreeBSD</a> area</p>
+                        <p>
+                        My topics of interests are about <a
+                            href="https://en.wikipedia.org/wiki/Berkeley_Software_Distribution">BSD</a>,
+                        <a href="https://en.wikipedia.org/wiki/Unix">UNIX</a>,
+                        <a href="https://en.wikipedia.org/wiki/Linux">Linux</a>,
+                        Operating systems, Software programming, Security,
+                        Distributed systems, Infrastructure.  </p>
                     </div>
                 </div>
             </div>
