update profile picture, remove location and welcome 2022

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
     <title>Sofian Brabez</title>
 
     <!-- Twitter Bootstrap -->
@@ -104,7 +105,7 @@
                          experiences working as <a href="https://en.wikipedia.org/wiki/Site_Reliability_Engineering">Site Reliability
                                 Engineer</a>, <a href="https://en.wikipedia.org/wiki/Software_engineer">Software Engineer</a>
                             and <a href="https://en.wikipedia.org/wiki/Systems_engineering">Systems
-                                Engineer</a> and on <strong>Security</strong>. I'm currently based in Dublin, Ireland.
+                                Engineer</a> and on <strong>Security</strong>.
                         </p>
                         <p>
                             Hosted code <a href="https://git.6dev.net">repos</a> area and
@@ -131,7 +132,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <br>
-                <p><small class="text-muted">© 2007-2021 Sofian Brabez</small></p>
+                <p><small class="text-muted">© 2007-2022 Sofian Brabez</small></p>
             </div>
         </div>
     </footer>
