--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
-    <title>Sofian Brabez</title>
+    <title>sbz</title>
 
     <!-- Twitter Bootstrap -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
@@ -25,11 +25,11 @@
     <script src="./assets/js/ga.js"></script>
 
     <!-- Common meta markup -->
-    <meta name="author" content="Sofian Brabez" />
+    <meta name="author" content="sbz" />
     <meta name="description" content="Personal website" />
 
     <!-- Facebook Open Graph markup -->
-    <meta property="og:title" content="Sofian Brabez" />
+    <meta property="og:title" content="sbz" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://6dev.net/" />
     <meta property="og:image" content="./assets/images/profile.png" />
@@ -38,7 +38,7 @@
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@sbrabez" />
     <meta name="twitter:creator" content="@sbrabez" />
-    <meta name="twitter:title" content="Sofian Brabez" />
+    <meta name="twitter:title" content="sbrabez" />
     <meta name="twitter:image" content="./assets/images/profile.png" />
 
 </head>
@@ -49,13 +49,13 @@
             <div class="row justify-content-center">
                 <div class="col-md-2 order-md-last text-center">
                     <a href="./assets/images/profile.png" target="_blank">
-                        <img src="./assets/images/profile.png" alt="Sofian Brabez" class="avatar">
+                        <img src="./assets/images/profile.png" alt="sbz" class="avatar">
                     </a>
                 </div>
 
                 <!-- Social links -->
                 <div class="col-md-8 order-md-first">
-                    <h1><a href="/">Sofian Brabez</a></h1>
+                    <h1><a href="/">sbz</a></h1>
                     <p>
                         <a href="https://github.com/sbz" target="_blank">
                             <i class="fab fa-github fa-2x" aria-hidden="true"></i>
@@ -96,16 +96,19 @@
                         <a href="https://www.quora.com/profile/Sofian-Brabez" target="_blank">
                             <i class="fab fa-quora fa-2x" aria-hidden="true"></i>
                         </a>
+                        <a href="https://twitch.tv/sbrabez" target="_blank">
+                            <i class="fab fa-twitch fa-2x" aria-hidden="true"></i>
+                        </a>
                     </p>
 
                     <hr/>
 
                     <div class="whoami">
-                        <p> Hey, I'm Sofian. I'm an FOSS enthusiast with past
+                        <p>Hey there, I'm Sof known online as sbz or sbrabez. I am a FOSS enthusiast with past
                          experiences working as <a href="https://en.wikipedia.org/wiki/Site_Reliability_Engineering">Site Reliability
                                 Engineer</a>, <a href="https://en.wikipedia.org/wiki/Software_engineer">Software Engineer</a>
                             and <a href="https://en.wikipedia.org/wiki/Systems_engineering">Systems
-                                Engineer</a> and on <strong>Security</strong>.
+                                Engineer</a> and <a href="https://en.wikipedia.org/wiki/Computer_security">Computer Security</a>.
                         </p>
                         <p>
                             Hosted code <a href="https://git.6dev.net">repos</a> area and
@@ -116,7 +119,17 @@
                         <a href="https://en.wikipedia.org/wiki/Unix">UNIX</a>,
                         <a href="https://en.wikipedia.org/wiki/Linux">Linux</a>,
                         Operating systems, Software programming, Security,
-                        Distributed systems, Infrastructure.  </p>
+                        Distributed systems, Infrastructure.</p>
+                        <p>
+                            I'm currently based in <a href="https://en.wikipedia.org/wiki/Toulouse">Toulouse,
+                            France</a> and work as a Site Reliability Engineer at <a href="https://www.ovhcloud.com">OVHCloud</a> on the public
+                            cloud.
+                        </p>
+                        <p>
+                            I'm passionated about UNIX systems programming and I
+                            generally use C, Python, bash and lately Go
+                            programming languages.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -132,7 +145,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <br>
-                <p><small class="text-muted">© 2007-2022 Sofian Brabez</small></p>
+                <p><small class="text-muted">© 2007-2022 sbz</small></p>
             </div>
         </div>
     </footer>
