--- a/index.html
+++ b/index.html
@@ -114,12 +114,19 @@
                             Hosted code <a href="https://git.6dev.net">repos</a> area and
                             <a href="https://people.freebsd.org/~sbz">FreeBSD</a> area</p>
                         <p>
-                        My topics of interests are about <a
-                            href="https://en.wikipedia.org/wiki/Berkeley_Software_Distribution">BSD</a>,
-                        <a href="https://en.wikipedia.org/wiki/Unix">UNIX</a>,
-                        <a href="https://en.wikipedia.org/wiki/Linux">Linux</a>,
-                        Operating systems, Software programming, Security,
-                        Distributed systems, Infrastructure.</p>
+                        My topics of interests are
+                        <ul>
+                            <li>FreeBSD,
+                            <a href="https://en.wikipedia.org/wiki/Berkeley_Software_Distribution">BSD</a>,
+                            <a href="https://en.wikipedia.org/wiki/Unix">UNIX</a>,
+                            <a href="https://en.wikipedia.org/wiki/Linux">Linux</a>
+                            </li>
+                            <li>Operating systems and Embedded systems</li>
+                            <li>Software, Algorithms, Programming</li>
+                            <li>Security, Storage, Distributed systems, Infrastructure</li>
+                            <li>Kernel, Device driver programming, 802.11x Wireless</li>
+                        </ul>
+                        </p>
                         <p>
                             I'm currently based in <a href="https://en.wikipedia.org/wiki/Toulouse">Toulouse,
                             France</a> and work as a Site Reliability Engineer at <a href="https://www.ovhcloud.com">OVHCloud</a> on the public
@@ -145,7 +152,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <br>
-                <p><small class="text-muted">© 2007-2022 sbz</small></p>
+                <p><small class="text-muted">© 2007-2023 sbz</small></p>
             </div>
         </div>
     </footer>
