--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
                             and <a href="https://en.wikipedia.org/wiki/Systems_engineering">Systems
                                 Engineer</a> and <a href="https://en.wikipedia.org/wiki/Computer_security">Computer Security</a>.
                         </p>
-                        <p>
+                        <!--p>
                             Hosted code <a href="https://git.6dev.net">repos</a> area and
                             <a href="https://people.freebsd.org/~sbz">FreeBSD</a> area</p>
-                        <p>
+                        <p-->
                         My topics of interests are
                         <ul>
                             <li>FreeBSD,
@@ -129,8 +129,7 @@
                         </p>
                         <p>
                             I'm currently based in <a href="https://en.wikipedia.org/wiki/Toulouse">Toulouse,
-                            France</a> and work as a Site Reliability Engineer at <a href="https://www.ovhcloud.com">OVHCloud</a> on the public
-                            cloud.
+                            France</a>.
                         </p>
                         <p>
                             I'm passionated about UNIX systems programming and I
@@ -152,7 +151,7 @@
         <div class="row">
             <div class="col-md-12 text-center">
                 <br>
-                <p><small class="text-muted">© 2007-2023 sbz</small></p>
+                <p><small class="text-muted">© 2007-2024 sbz</small></p>
             </div>
         </div>
     </footer>
